<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    android:padding="20dp"
    android:id="@+id/main">

    <ImageButton
        android:id="@+id/btnBack"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:background="@color/black"
        android:src="@drawable/back_arrow"
        android:contentDescription="Back" />

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/log_in"
        android:textColor="#FFFFFF"
        android:textSize="22sp"
        android:textStyle="bold" />

    <LinearLayout
        android:id="@+id/formContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvTitle"
        android:layout_marginTop="50dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            android:layout_marginBottom="8dp" />

        <EditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:background="@drawable/input_field_background"
            android:hint="@string/enter_your_email"
            android:paddingLeft="15dp"
            android:layout_margin="4dp"
            android:textColor="#FFFFFF"
            android:textColorHint="#888888" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="8dp" />

        <EditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:background="@drawable/input_field_background"
            android:hint="@string/enter_your_password"
            android:inputType="textPassword"
            android:paddingLeft="15dp"
            android:layout_margin="4dp"
            android:textColor="#FFFFFF"
            android:textColorHint="#888888" />

    </LinearLayout>

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_below="@id/formContainer"
        android:layout_marginTop="40dp"
        android:backgroundTint="#FF0000"
        android:text="@string/log_in"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        android:textSize="18sp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/btnLogin"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text= "@string/don_t_have_an_account"
            android:textColor="#FFFFFF" />

        <TextView
            android:id="@+id/tvRegister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register"
            android:padding="6dp"
            android:textColor="#007BFF"
            android:textStyle="bold" />
    </LinearLayout>

</RelativeLayout>