<?xml version="1.0" encoding="utf-8"?>

<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:id="@+id/onboarding">


    <View
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#CC000005" />


    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center|bottom"
        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/explore_now_nto_experience_the_benefits"
            android:textColor="#FFFFFF"
            android:textSize="28sp"
            android:textStyle="bold"
            android:gravity="center"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lorem_ipsum_dolor_sit_amet_consectetur_adipiscing_elit_sed_do_eiusmod_tempor_incididunt_ut_labore"
            android:textColor="#CCCCCC"
            android:textSize="16sp"
            android:gravity="center"
            android:layout_marginTop="16dp"
            android:paddingHorizontal="20dp" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_marginTop="32dp"
            android:layout_marginBottom="16dp"
            android:backgroundTint="#FF0000"
            android:text="@string/get_started"
            android:textColor="#FFFFFF"
            android:textSize="18sp"
            android:textStyle="bold"
            android:id="@+id/btnGetStarted"/>

    </LinearLayout>

</FrameLayout>