<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#000000">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="16dp"
        android:gravity="center_vertical">


        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/my_bookings"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            android:textStyle="bold"
            android:gravity="center" />

    </LinearLayout>


    <EditText
        android:id="@+id/searchBar"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        android:hint="@string/search"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:textColor="#FFFFFF"
        android:textColorHint="#AAAAAA"
        android:background="@drawable/input_field_background"
         />


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewBookings"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:paddingBottom="16dp" />

    <TextView
        android:id="@+id/tvNoResults"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/no_bookings_found"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        android:gravity="center"
        android:visibility="gone"
        android:layout_marginTop="20dp"/>

</LinearLayout>